Fix Stretched Images in member card

--- a/src/App.css
+++ b/src/App.css
@@ -427,9 +427,10 @@ input[type="radio"] {
 }
 
 .card-img {
-  border-radius: 50%;
-  margin-bottom: 20px;
-  height: 120px;
+  border-radius: 50%; 
+  object-fit: cover; 
+  width: 150px; 
+  height: 150px; 
 }
 
 .card-title {
